--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,17 @@ body {
 
 h1 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 2rem; 
-    color: red; 
+    font-size: 2rem;  
+    font-weight: bold;
+}
+
+h3 {
+    font-size: 1.5rem;    
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+.nav-link {
+    font-weight: bold;
+    font-size: 1.5rem;
 }
